# omni-bridge-services

./: Cargo.toml  README.md
.github/workflows/: docker.yaml  release.yml  rust.yaml
bridge-indexer-types/: Cargo.toml
bridge-indexer-types/src/: args_outcome_types.rs  compact_types.rs  documents_types.rs  eth_types.rs  integers.rs  lib.rs  stream_types.rs
omni-relayer/: Cargo.toml  Dockerfile  README.md  example-devnet-config.toml  example-docker-config.toml  example-mainnet-config.toml  example-testnet-config.toml
omni-relayer/src/: config.rs  main.rs
omni-relayer/src/startup/: event_handlers.rs  evm_fee_bumping.rs  mod.rs
omni-relayer/src/startup/native_indexers/: near.rs  solana.rs
omni-relayer/src/utils/: blacklist.rs  bridge_api.rs  mod.rs  nats.rs  near.rs  solana.rs
omni-relayer/src/workers/: evm.rs  mod.rs  near.rs  utxo.rs
