[package]
name = "bridge-indexer-types"
version = "0.1.0"
authors = ["Pavel Kisialiou <pavel.kisialiou@nearone.org>", "Karim Alabtakh <karim.alabtakh@nearone.org>"]
edition = "2024"

[dependencies]
borsh = "1.5.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1"
serde_with = "3.10"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
ethereum-types = {version = "0.12", features = ["rlp"]}
utoipa = "5.1.3"
hex = "0.4"
near-indexer-primitives = "0.34.2"
bson = "2.11.0"
ethabi = "12.0.0"
rlp = "0.4.6"
thiserror = "1"
near-gas = "0.3.4"
omni-types = { workspace = true }
