[package]
name = "bridge-indexer-types"
version = "0.1.0"
edition = "2024"

[dependencies]
bson = "2.11.0"
near-gas = "0.3.4"
near-indexer-primitives = "0.34.2"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1"
serde_with = "3.10"
utoipa = "5.1.3"
omni-types = { workspace = true }
